src/test/ui/parser/issue-62913.rs
"\u\\"
//~^ ERROR incorrect unicode escape sequence
//~| ERROR invalid trailing slash in literal
//~| ERROR statements cannot reside in modules
//~| ERROR `main` function not found
